# rust-trading

./: .gitignore  Cargo.toml  README.md
migrations/: 20250209182621_create_users.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/api/: router.rs
src/auth/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/db/: mod.rs  mongodb.rs
src/market/: handler.rs  model.rs  routes.rs  service.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/paper_trading/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/routes/: auth.rs  mod.rs
src/strategies/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/strategies/indicators/: macd.rs  mod.rs  moving_average.rs  rsi.rs
src/utils/: hash.rs  jwt.rs
