[package]
name = "rust-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
bcrypt = "0.14"
jsonwebtoken = "8"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"